# claude-chat-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  claude_core.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  slack_bot.py  telegram_bot.py  watchdog.py  whatsapp_bot.py
docs/: advanced-telegram-features.md  architecture.html  architecture.md  implementation-tracker.md  self-improving-design.md
npm/: LICENSE  README.md  package.json
scripts/: install.sh  publish.sh  service.sh  start.sh  watchdog.plist  watchdog.py
telechat_pkg/: __init__.py  __main__.py  auto_scheduler.py  browser_automation.py  claude_core.py  coder.py  commitments.py  context_compaction.py  conversation_export.py  cost_budget.py  doctor.py  document_extract.py  error_classifier.py  event_bus.py  feedback.py  health.py  image_gen.py  knowledge_base.py  link_understanding.py  main.py  markdown_v2.py  mcp_client.py  memory.py  music_gen.py  polls.py  qr_util.py  resource_limiter.py  scheduled_tasks.py  session_manager.py  slack_bot.py  smart_router.py  store.py  telegram_bot.py  text_chunking.py  tts.py  two_agent.py  video_gen.py  voice_transcription.py  web_chat.py  web_chat_ui.html  (+3 more)
tests/: bench_telechat.py  conftest.py  e2e-features.sh  e2e-install.sh  e2e-platforms.sh  run-all.sh  test_100_complete.py  test_100_coverage.py  test_100_coverage_extra.py  test_100_final_coverage.py  test_100_final_push.py  test_advanced_features.py  test_claude_core.py  test_coder.py  test_coverage_boost.py  test_coverage_final.py  test_coverage_gaps.py  test_init_e2e.py  (+16 more)
(+2 files in other folders)
